# bbcodelib

./: CMakeLists.txt  bbcodelib.sln  init.sh  readme.txt
bbcodelib/: bbcode_config.h  bbcode_parser.cpp  bbcode_parser.h  bbcode_utils.cpp  bbcodelib.mak  bbcodelib.vcproj  c.sh
testsuite/: custom_bbcodes.tbl  main.cpp  message.bb  sample_table.html  testsuite.mak  testsuite.vcproj
